# pair_trading

./: .gitignore  LICENSE  README.md  setup.sh
pair-trading-foundations/: Dockerfile  pyproject.toml  transformed_data.csv  xgb_st_entry.pkl
pair-trading-foundations/.k8s/bases/: deployment-mlapi.yaml  deployment-redis.yaml  kustomization.yaml  service-mlapi.yaml  service-redis.yaml
pair-trading-foundations/.k8s/dev/: kustomization.yaml
pair-trading-foundations/.k8s/prod/: kustomization.yaml  patch-deployment-mlapi.yaml  virtual-service.yaml
pair-trading-foundations/infra/: deployment-mlapi.yaml  deployment-redis.yaml  namespace.yaml  service-prediction.yaml  service-redis.yaml
pair-trading-foundations/mlapi/: main.py
pair-trading-foundations/notebooks/: Basic Modeling-Marshal.ipynb  Basic Modeling.ipynb  Basic_Modeling_Michael.ipynb  Examine Output data.ipynb  LSTM_exploration.ipynb  PNL x Entry Signal Analysis.ipynb  Precision at K with two classifiers.ipynb  Stock2Vec.ipynb  Training Data Generation.ipynb  TrainingDataGeneration.ipynb  distilled_data_extraction.ipynb  distilted_data_extraction.ipynb  final.ipynb  pair_trading_eda.ipynb  pair_trading_eda_ARIMA.ipynb  scoring_system_exp_marshal.ipynb  stock_str.txt  train_data_generation_playground.ipynb  training_dev.ipynb  training_nb.ipynb  training_simple_marshal.ipynb  vectorize_data_generation_for_each_pair.ipynb
pair-trading-foundations/notebooks/logs/: path.prof
pair-trading-foundations/notebooks/modeling/: Backtesting.ipynb
pair-trading-foundations/notebooks/pair_trading_foundations/: data_generation.py  utils.py
pair-trading-foundations/pair_trading_foundations/: data_generation.py
pair-trading-foundations/scripts/: curl.sh  deploy.sh  local_build.sh  local_curl.sh  local_run.sh  local_stop.sh  run_deploy.sh  test_localcurl.sh
pair-trading-foundations/tests/: conftest.py  test_mlapi.py
pair-trading-foundations/trainer/: train.py
(+29 files in other folders)
