[tool.poetry]
name = "pair-trading-foundations"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
yfinance = "^0.2.36"
pandas-datareader = "^0.10.0"
pandas = "^2.2.0"
numpy = "^1.26.3"
arch = "^6.3.0"
ipykernel = "^6.29.2"
matplotlib = "^3.8.3"
plotly = "^5.19.0"
xgboost = "^2.0.3"
scikit-learn = "^1.4.1.post1"
tqdm = "^4.66.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"