[tool.poetry]
name = "pair-trading-foundations"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
yfinance = "^0.2.36"
pandas-datareader = "^0.10.0"
pandas = "^2.2.0"
numpy = "^1.26.3"
arch = "^6.3.0"
lightgbm = "^4.3.0"
faiss-cpu = "^1.7.4"
tqdm = "^4.66.2"
imblearn = "^0.0"
optuna = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
