[tool.poetry]
name = "pair-trading-foundations"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "^0.103.1"
fastapi-cache2 = "0.1.9"
uvicorn = "^0.23.2"
yfinance = "^0.2.36"
pandas-datareader = "^0.10.0"
pandas = "^2.2.0"
numpy = "^1.26.3"
arch = "^6.3.0"
lightgbm = "^4.3.0"
faiss-cpu = "^1.7.4"
tqdm = "^4.66.2"
imblearn = "^0.0"
optuna = "^3.5.0"
ipykernel = "^6.29.2"
matplotlib = "^3.8.3"
plotly = "^5.19.0"
xgboost = "^2.0.3"
scikit-learn = "^1.4.1.post1"
redis = { version = "^4.2.0rc1", optional = true }
ta = "^0.11.0"
tensorflow = "^2.15.0.post1"

[tool.poetry.dev-dependencies]
pytest = "^8.0.1"

[tool.poetry.extras]
redis = ["redis"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"